--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,5 +13,5 @@
 			]
 		}
 	},
-	"postCreateCommand": "pipx install ansible-lint"
+	"postCreateCommand": "pipx install ansible-lint && ansible-galaxy collection install -r ansible/requirements.yaml"
 }
