--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,10 +1,11 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/jammy64"
-  config.vm.network "private_network", ip: "10.0.255.10"
+  config.vm.network "private_network", ip: "10.255.0.10"
+
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "2048"
   end
-  config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "../ansible/full.yaml"
-  end
+
+  config.vm.provision "ansible", playbook: "../ansible/full.yaml"
+  config.vm.provision "ansible", playbook: "../ansible/docker-group.yaml"
 end
